[package]
description = "surge synthesizer -- toplevel synthesizer virtual instrument"
license = "GPL-3.0"
name = "surge-synthesizer"
version = "0.1.9-alpha.0"
authors = [ 
    "Adam Raisbeck <sense@i2pi.com>",
    "Alec DiAstra <alecdiastra@gmail.com>",
    "Alexandre Bique <bique.alexandre@gmail.com>",
    "Amy Furniss <http://github.com/amyfurniss>",
    "Brian Ginsburg <https://github.com/bgins>",
    "Cale Gibbard <cgibbard@gmail.com>",
    "Claes Johanson <claes@bitwig.com>",
    "Dave Palmer <itsmedavep@gmail.com>",
    "David Bata <https://github.com/tank-trax>",
    "David Carlier <devnexen@gmail.com>",
    "Erik-Jan Maalderink <fonkle@gmx.com>",
    "Esa Juhani Ruoho <esaruoho@gmail.com>",
    "Filipe Coelho <falktx@falktx.com>",
    "Hendrik van Boetzelaer <http://opuswerk.com>",
    "Jacky Ligon <http://jackyligon.com>",
    "Jani Frilander <http://github.com/janifr>",
    "Jarkko Sakkinen <jarkko.sakkinen@iki.fi>",
    "Jatin Chowdhury <jatin@ccrma.stanford.edu>",
    "Jean Pierre Cimalando <jp-dev@inbox.ru>",
    "Jeff Smith <whydoubt@gmail.com>",
    "Jeremy Sagan <info@sagantech.biz>",
    "Jon Spruyt <http://jonspru.yt>",
    "Keith Zantow <kzantow@gmail.com>",
    "Kjetil Matheussen <k.s.matheussen@notam02.no>",
    "Korridor <fabian.kempe@gmail.com>",
    "Luna Langton <https://github.com/selenologist>",
    "Mario Krušelj a.k.a. EvilDragon <http://github.com/mkruselj>",
    "Markku Tavasti <tavasti@iki.fi>",
    "Marty Lake <matthieu@talbot.audio>",
    "Matthias von Faber <http://github.com/mvf>",
    "Mikko Saarinki <https://github.com/kingston1>",
    "Nathan Kopp <nk.sg@nathankopp.com>",
    "Paul Walker <paul@pwjw.com>",
    "Rich Elmes <richie@juic3.com>",
    "Sebastian Schwarzhuber <https://github.com/cannero>",
    "The Emu (J Riley Hill) <http://jrileyhill.com>",
    "Vincent Zauhar <v.zauhar@bell.net>",
    "klebs <none>",
    "muhl <https://github.com/mynameismuhl>",
    "簡志瑋 <dppss92132@gmail.com>",
    ]

edition = "2018"

[dependencies]
dirs = "*"
serde = { version = "1.0", features = ["derive"] }
automod = "*"
vst = "*"
coreaudio-rs = "*"
jack = "*"
lazy_static = "*"
atomic_float = "*"
num-traits = "*"
rand = "*"
libc = "*"
derive_more = "*"
prometheus = "*"
num = "*"
approx = "*"
getset = "*"
enhanced_enum = "*"
half = "*"
float-ord = "*"
float-cmp = "*"
xml-rs = "*"
num-complex = "*"
indoc = "*"
bitflags = "1.0"
lockfree = "*"
downcast-rs = "*"
paste = "*"
regex = "*"
#query_interface = "*"
mopa = "*"
bincode = "*"
byteorder = "*"
libxml = "*"
enum_dispatch = "*"
riff-wave = "*"
ndarray = "*"

#[dependencies.ndarray]
#path = "./vendor/ndarray"

[dependencies.bytemuck]
version = "*"
features = ['extern_crate_alloc']

[lib]
path = "src/lib.rs"
name = "surge432"
crate-type = ["cdylib", "lib"]

[[bin]]
path = "src/main.rs"
name = "surge432_host"

[patch.crates-io]
#vst = { path = "vendor/vst" }

[dependencies.surge-adsr]
path = "../surge-adsr"
version = "0.1.2-alpha.0"

[dependencies.surge-biquad]
path = "../surge-biquad"
version = "0.1.2-alpha.0"

[dependencies.surge-blitter]
path = "../surge-blitter"
version = "0.1.2-alpha.0"

[dependencies.surge-coeffmaker]
path = "../surge-coeffmaker"
version = "0.1.2-alpha.0"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.2-alpha.0"

[dependencies.surge-filter]
path = "../surge-filter"
version = "0.1.2-alpha.0"

[dependencies.surge-halfrate]
path = "../surge-halfrate"
version = "0.1.2-alpha.0"

[dependencies.surge-input]
path = "../surge-input"
version = "0.1.2-alpha.0"

[dependencies.surge-lag]
path = "../surge-lag"
version = "0.1.2-alpha.0"

[dependencies.surge-lfo]
path = "../surge-lfo"
version = "0.1.2-alpha.0"

[dependencies.surge-lipol]
path = "../surge-lipol"
version = "0.1.2-alpha.0"

[dependencies.surge-math]
path = "../surge-math"
version = "0.1.2-alpha.0"

[dependencies.surge-output]
path = "../surge-output"
version = "0.1.2-alpha.0"

[dependencies.surge-param]
path = "../surge-param"
version = "0.1.2-alpha.0"

[dependencies.surge-qfunit]
path = "../surge-qfunit"
version = "0.1.2-alpha.0"

[dependencies.surge-quadrosc]
path = "../surge-quadrosc"
version = "0.1.2-alpha.0"

[dependencies.surge-samplerate]
path = "../surge-samplerate"
version = "0.1.2-alpha.0"

[dependencies.surge-svf]
path = "../surge-svf"
version = "0.1.2-alpha.0"

[dependencies.surge-tables]
path = "../surge-tables"
version = "0.1.2-alpha.0"

[dependencies.surge-timeunit]
path = "../surge-timeunit"
version = "0.1.2-alpha.0"

[dependencies.surge-tuning]
path = "../surge-tuning"
version = "0.1.2-alpha.0"

[dependencies.surge-wavetable]
path = "../surge-wavetable"
version = "0.1.8-alpha.0"

[dependencies.surgefilter-comb]
path = "../surgefilter-comb"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-diode]
path = "../surgefilter-diode"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-iir]
path = "../surgefilter-iir"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-k35]
path = "../surgefilter-k35"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-moog]
path = "../surgefilter-moog"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-nlfeedback]
path = "../surgefilter-nlfeedback"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-nlstates]
path = "../surgefilter-nlstates"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-obxd]
path = "../surgefilter-obxd"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-snh]
path = "../surgefilter-snh"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-svf]
path = "../surgefilter-svf"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-huovilainen]
path = "../surgefilter-huovilainen"
version = "0.1.2-alpha.0"

[dependencies.surgefilter-rungekutta]
path = "../surgefilter-rungekutta"
version = "0.1.2-alpha.0"

[dependencies.surgefx]
path = "../surgefx"
version = "0.1.2-alpha.0"

[dependencies.surgefx-allpass]
path = "../surgefx-allpass"
version = "0.1.2-alpha.0"

[dependencies.surgefx-chorus]
path = "../surgefx-chorus"
version = "0.1.2-alpha.0"

[dependencies.surgefx-conditioner]
path = "../surgefx-conditioner"
version = "0.1.2-alpha.0"

[dependencies.surgefx-distortion]
path = "../surgefx-distortion"
version = "0.1.2-alpha.0"

[dependencies.surgefx-dualdelay]
path = "../surgefx-dualdelay"
version = "0.1.2-alpha.0"

[dependencies.surgefx-emphasize]
path = "../surgefx-emphasize"
version = "0.1.2-alpha.0"

[dependencies.surgefx-eq3band]
path = "../surgefx-eq3band"
version = "0.1.2-alpha.0"

[dependencies.surgefx-flanger]
path = "../surgefx-flanger"
version = "0.1.2-alpha.0"

[dependencies.surgefx-freqshift]
path = "../surgefx-freqshift"
version = "0.1.2-alpha.0"

[dependencies.surgefx-phaser]
path = "../surgefx-phaser"
version = "0.1.2-alpha.0"

[dependencies.surgefx-reverb]
path = "../surgefx-reverb"
version = "0.1.2-alpha.0"

[dependencies.surgefx-ringmod]
path = "../surgefx-ringmod"
version = "0.1.2-alpha.0"

[dependencies.surgefx-rotary]
path = "../surgefx-rotary"
version = "0.1.2-alpha.0"

[dependencies.surgefx-vocoder]
path = "../surgefx-vocoder"
version = "0.1.2-alpha.0"

[dependencies.surgeosc-audioin]
path = "../surgeosc-audioin"
version = "0.1.2-alpha.0"

[dependencies.surgeosc-fm]
path = "../surgeosc-fm"
version = "0.1.2-alpha.0"

[dependencies.surgeosc-fm2]
path = "../surgeosc-fm2"
version = "0.1.2-alpha.0"

[dependencies.surgeosc-sine]
path = "../surgeosc-sine"
version = "0.1.2-alpha.0"

[dependencies.surgeosc-snh]
path = "../surgeosc-snh"
version = "0.1.2-alpha.0"

[dependencies.surgeosc-super]
path = "../surgeosc-super"
version = "0.1.2-alpha.0"

[dependencies.surgeosc-wavetable]
path = "../surgeosc-wavetable"
version = "0.1.8-alpha.0"

[dependencies.surgeosc-window]
path = "../surgeosc-window"
version = "0.1.8-alpha.0"

[dependencies.surgeshaper-asym]
path = "../surgeshaper-asym"
version = "0.1.2-alpha.0"

[dependencies.surgeshaper-clip]
path = "../surgeshaper-clip"
version = "0.1.2-alpha.0"

[dependencies.surgeshaper-digi]
path = "../surgeshaper-digi"
version = "0.1.2-alpha.0"

[dependencies.surgeshaper-sine]
path = "../surgeshaper-sine"
version = "0.1.2-alpha.0"

[dependencies.surgeshaper-tanh]
path = "../surgeshaper-tanh"
version = "0.1.2-alpha.0"

[dependencies.surge-midi]
path = "../surge-midi"
version = "0.1.2-alpha.0"

[dependencies.surge-modulation]
path = "../surge-modulation"
version = "0.1.2-alpha.0"

[dependencies.surge-mpe]
path = "../surge-mpe"
version = "0.1.2-alpha.0"

[dependencies.surge-scene]
path = "../surge-scene"
version = "0.1.8-alpha.0"

[dependencies.surge-traits]
path = "../surge-traits"
version = "0.1.2-alpha.0"

[dependencies.surge-types]
path = "../surge-types"
version = "0.1.2-alpha.0"

[dependencies.surge-macros]
path = "../surge-macros"
version = "0.1.2-alpha.0"

