[package]
name = "surge-tables"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-math]
path = "../surge-math"
version = "0.1.0"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.0"

[dependencies.surge-traits]
path = "../surge-traits"
version = "0.1.0"

[dependencies.surge-types]
path = "../surge-types"
version = "0.1.0"

[dependencies.surge-samplerate]
path = "../surge-samplerate"
version = "0.1.0"

[dependencies]
float-ord = "*"
