[package]
name = "surge-timeunit"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-constants]
path = "../surge-constants"

[dependencies.surge-traits]
path = "../surge-traits"

[dependencies.surge-samplerate]
path = "../surge-samplerate"
