[package]
description = "surge synthesizer -- traits for various synthesizer components"
license = "GPL-3.0"
name = "surge-traits"
version = "0.1.1-alpha.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enhanced_enum = "*"
enum_dispatch = "*"

[dependencies.surge-types]
path = "../surge-types"
version = "0.1.1-alpha.0"