[package]
description = "surge synthesizer -- handle to the surge tuner, allowing microtunig.  contains various tuning configurations"
license = "GPL-3.0"
name = "surge-tuning"
version = "0.1.1-alpha.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "*"
getset = "*"
enhanced_enum = "*"
num-traits = "*"
float-ord = "*"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.1-alpha.0"

[dependencies.surge-traits]
path = "../surge-traits"
version = "0.1.1-alpha.0"

[dependencies.surge-math]
path = "../surge-math"
version = "0.1.1-alpha.0"

[dependencies.surge-samplerate]
path = "../surge-samplerate"
version = "0.1.1-alpha.0"

[dependencies.surge-types]
path = "../surge-types"
version = "0.1.1-alpha.0"