[package]
name = "surge-types"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enhanced_enum = "*"
paste = "*"
serde = { version = "*", features = ["derive"] }

[dependencies.surge-macros]
path = "../surge-macros"
version = "0.1.0"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.0"

[dependencies.surge-math]
path = "../surge-math"
version = "0.1.0"

[dependencies.surge-param]
path = "../surge-param"
version = "0.1.0"
