[package]
name = "surge-wavetable"
version = "0.1.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-math]
path = "../surge-math"

[dependencies.surge-constants]
path = "../surge-constants"

[dependencies.surge-traits]
path = "../surge-traits"

[dependencies.surge-types]
path = "../surge-types"

[dependencies]
enhanced_enum = "*"
bitflags = "*"
libc = "*"
num-traits = "*"
enum_dispatch = "*"

[dependencies.hound]
path = "/Users/kleb/sunnyvale/work/3p/hound"

#[patch.crates-io]
#hound = { path = "vendor/hound" }
