[package]
description = "surge synthesizer -- structure to represent a wavetable"
license = "GPL-3.0"
name = "surge-wavetable"
version = "0.1.1-alpha.0"
authors = ["klebs <none>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.surge-math]
path = "../surge-math"
version = "0.1.1-alpha.0"

[dependencies.surge-constants]
path = "../surge-constants"
version = "0.1.1-alpha.0"

[dependencies.surge-traits]
path = "../surge-traits"
version = "0.1.1-alpha.0"

[dependencies.surge-types]
path = "../surge-types"
version = "0.1.1-alpha.0"

[dependencies]
enhanced_enum = "*"
bitflags = "*"
libc = "*"
num-traits = "*"
enum_dispatch = "*"

[dependencies.surge-hound]
path = "./surge-hound"

#[patch.crates-io]
#hound = { path = "vendor/hound" }